--- a/php/blocks/forms/callback.phtml
+++ b/php/blocks/forms/callback.phtml
@@ -11,13 +11,13 @@
     </div>
     <div class="inputs__row">
     <div class="inputs__field-wrap">
-        <input class="btn btn--black" type="submit" value="Отправить заявку">
+        <input class="btn btn--primary" type="submit" value="Отправить заявку">
         <input type="hidden" name="system_form_id" value="192">
         <input type="hidden" name="system_email_to" value="959">
     </div>
     <div class="inputs__field-wrap mobile--hide">
         <div class="inputs__personal">
-        <p>Нажимая на кнопку “Отправить заявку”, я соглашаюст с условиями на передачу</p><a class="inputs__personal-link" href="">персональных данных</a>
+        <p>Нажимая на кнопку “Отправить заявку”, я соглашаюсь с условиями на передачу</p><a class="inputs__personal-link" href="">персональных данных</a>
         </div>
     </div>
     </div>
