--- a/php/content/pools/page_old.phtml
+++ b/php/content/pools/page_old.phtml
@@ -102,7 +102,7 @@ $product__tabs['delivery'] = 'Доставка и оплата';
     </div>
   </div>
 
-  <?php if($fabrikaId==53032){ ?>
+  <?php if($fabrikaId){ ?>
     <div class="product__column" style="position: sticky;top: 86px;display: table;">  
       <div class="product__price">
         <div class="price"> 
