--- a/php/content/pools/configurator/index.phtml
+++ b/php/content/pools/configurator/index.phtml
@@ -79,7 +79,7 @@ foreach($modelsArr as $category){
             </div>
             <div class="configurator__option configurator__option--active option_variant">
                 <h6 class="configurator__option-header">Вариант исполнения</h6>
-                <div class="configurator__option-window configurator__option-window_modified">
+                <div class="configurator__option-window configurator__option-window_modified" data-price="0">
                     <div class="info_icon-container">
                         <svg class="info_icon" width="19" height="19" viewBox="0 0 19 19" xmlns="http://www.w3.org/2000/svg">
                             <circle cx="9.29319" cy="9.29319" r="8.79319" fill="white" />
@@ -90,7 +90,7 @@ foreach($modelsArr as $category){
                         <p>Базовый вариант исполнения.</p>
                     </div>
                     <div><span>Liner</span></div>
-                    <div><span id="base-price">0 ₽</span></div> 
+                    <div><span class="base-price">0 ₽</span></div> 
                 </div>
                 <div class="configurator__option-window configurator__option-window_modified">
                     <div class="info_icon-container">
@@ -103,7 +103,7 @@ foreach($modelsArr as $category){
                         <p>Вариант исполнения с тремя дополнительными защитными слоями (слой прозрачной смолы, декоративны наполнитель, керамика).</p>
                     </div>
                     <div><span>Cristal</span></div>
-                    <div><span id="cristal-price"></span></div>
+                    <div><span class="cristal-price"></span></div>
                 </div>
             </div>
             <div class="configurator__option equipment_list configurator__equipment" data-section="121198">
@@ -255,7 +255,7 @@ foreach($modelsArr as $category){
     <div class="center-wrap" >
         <button class="btn-link" type="submit">Сохранить набор</button>
         <div>
-            <span id="bottom_price"></span>
+            <span class="bottom_price"></span>
             <button class="btn btn--blue showCalc__btn">Показать расчёт</button>
         </div>
     </div>
