--- a/src/assets/css/blocks/configurator.scss
+++ b/src/assets/css/blocks/configurator.scss
@@ -332,7 +332,7 @@
         padding: 0;
         font-size: 14px;
       }
-      #bottom_price {
+      .bottom_price {
         color: #353535;
         font-size: 1.7rem;
         font-weight: bold;
