--- a/src/assets/css/blocks/pool.scss
+++ b/src/assets/css/blocks/pool.scss
@@ -244,3 +244,32 @@
         color:#000;
     }
 }
+
+.gidro__colors_name {
+    font-size: 16px;
+}
+
+.gidro__project {
+    max-height: 286px;
+    flex: 0 0 25%;
+    max-width: 25%;
+    text-align: center;
+    padding: 10px;
+    img {
+        max-height: 86%;
+        margin-bottom: 10px;
+    }
+    span {
+        font-size: 16px;
+    }
+}
+
+.pool_setup {
+    table {
+        border: 1px solid black;
+        td {
+            border: 1px solid black;
+            color: #383c40;
+        }
+    }
+}
